2005-11-08  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs: Implement IEquatable<FilePosition> for FilePosition.
	* Syscall.cs: Provide GetHashCode(), Equals(), operator==, operator!= for
	  all structure types.  Implement IEquatable<T> for all "value type" 
	  structs and classes.

2005-11-07  Jonathan Pryor <jonpryor@vt.edu>

	* Syscall.cs: *xattr functions should use the FileNameMarshaler for filenames.

2005-11-07  Jonathan Pryor <jonpryor@vt.edu>

	* make-map.cs: Always use ordinal string sorting behavior.  The string
	  collation sorting has changed, so to keep the mono/support diff sizes down
	  we have to explicitly specify the previous implicit ordering.

2005-11-02  Jonathan Pryor <jonpryor@vt.edu>

	* Syscall.cs: Remove [CLSCompliant(false)] when it isn't needed.

2005-11-02  Jonathan Pryor <jonpryor@vt.edu>

	* FileNameMarshaler.cs: Use UnixMarshal.FreeHeap().  .Free() is obsolete.

2005-10-27  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs: Correct return type of setbuf(IntPtr, byte*).
	* Syscall.cs: Remove [Obsolete] SyslogFacility.LOG_USRE member
	  (Mono.Unix.Native hasn't shipped yet, so nobody is using it); correct
	  [Obsolete] comment for getpagesize().

2005-10-26  Jonathan Pryor <jonpryor@vt.edu>

	* FileNameMarshaler.cs: Deal with UnixMarshal method name changes.

2005-10-26  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs: FilePosition should derive from MarshalByRefObject, for two
	  reasons: (1) it's a recommendation from FxCop that classes implementing
	  IDisposable also derive from MarshalByRefObject; (2) FilePosition is
	  exposed from Mono.Unix.StdioFileStream, which (indirectly) inherits from
	  MarshalByRefObject.  Fix Equals() so it doesn't rely on Reflection.

2005-10-25  Jonathan Pryor <jonpryor@vt.edu>

	* FileNameMarshaler.cs: Custom marshaler to marshal filenames using
	  Mono.Unix.UnixEncoding.  A custom marshaler is used to remove the need to
	  have ~6 lines of boilerplate on every method that takes filenames.